--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.1",
+    "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
-    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "mysql": "^2.18.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
